--- a/public/mangaUpload.html
+++ b/public/mangaUpload.html
@@ -7,8 +7,16 @@
     <link rel="stylesheet" href="css/mangaUpload.css" />
   </head>
   <body>
-    <form id="upload-form">
-      <input type="file" name="file">
+    <form id="upload-form" action="/upload" method="post" enctype="multipart/form-data">
+      <label for="file">ZIPファイルを選択:</label>
+      <input type="file" name="file" accept=".zip">
+      <input type="text" name="title" placeholder="タイトル">
+      <input type="text" name="authors" placeholder="作者">
+      <input type="text" name="groups" placeholder="サークル">
+      <input type="text" name="originals" placeholder="原作">
+      <input type="text" name="charactors" placeholder="キャラクター">
+      <input type="text" name="tags" placeholder="タグ">
+      <button type="submit">アップロード</button>
     </form>
     <script src="js/mangaUpload.js"></script>
   </body>
