--- a/public/mangaUpload.html
+++ b/public/mangaUpload.html
@@ -9,7 +9,7 @@
   <body>
     <form id="upload-form" method="post" enctype="multipart/form-data">
       <label for="file">ZIPファイルを選択:</label>
-      <input type="file" id="file" name="file" accept=".png" required>
+      <input type="file" id="file" name="file" accept=".zip" required>
       <input type="text" id="title" name="title" placeholder="タイトル" required>
       <input type="text" id="authors" name="authors" placeholder="作者" required>
       <input type="text" id="groups" name="groups" placeholder="サークル">
