アップロード画面へのリンクを追加

--- a/public/mangaList.html
+++ b/public/mangaList.html
@@ -9,6 +9,7 @@
   <body>
     <h1>ローカル漫画ビューア</h1>
     <div id="tag-list-page"><a href="/taglist">タグリスト</a></div>
+    <div id="manga-upload-page"><a href="/upload">アップロード</a></div>
     <div class="manga-list">
       <div id="manga-list-container">
         <!-- 漫画フォルダ一覧を表示する場所 -->
