--- a/public/mangaUpload.html
+++ b/public/mangaUpload.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <form id="upload-form" method="post" enctype="multipart/form-data">
-      <label for="file">ZIPファイルを選択:</label>
-      <input type="file" id="file" name="file" accept=".zip" required>
+      <label for="file">ファイルを選択:</label>
+      <input type="file" id="file" name="file" accept="application/x-zip-compressed, application/zip, application/pdf" required>
       <input type="text" id="title" name="title" placeholder="タイトル" required>
       <input type="text" id="authors" name="authors" placeholder="作者" required>
       <input type="text" id="groups" name="groups" placeholder="サークル">
