typeScriptに書き換え、大規模なファイル構造変更

--- a/src/public/mangaList.html
+++ b/src/public/mangaList.html
@@ -16,6 +16,6 @@
       </div>
       <div class="pagination" id="pagination"></div>
     </div>
-    <script src="js/mangaList.js"></script>
+    <script src="js/mangaList.ts"></script>
   </body>
 </html>
