--- a/src/public/mangaUpload.html
+++ b/src/public/mangaUpload.html
@@ -14,10 +14,10 @@
       <input type="text" id="authors" name="authors" placeholder="作者" required>
       <input type="text" id="groups" name="groups" placeholder="サークル">
       <input type="text" id="originals" name="originals" placeholder="原作">
-      <input type="text" id="charactors" name="charactors" placeholder="キャラクター">
+      <input type="text" id="characters" name="characters" placeholder="キャラクター">
       <input type="text" id="tags" name="tags" placeholder="タグ">
       <button type="submit">アップロード</button>
     </form>
-    <script src="js/mangaUpload.js"></script>
+    <script src="js/mangaUpload.ts"></script>
   </body>
 </html>
