--- a/src/public/taglist.html
+++ b/src/public/taglist.html
@@ -9,6 +9,6 @@
   <body>
     <div id="tag-list-container">
     </div>
-    <script src="js/taglist.js"></script>
+    <script src="js/taglist.ts"></script>
   </body>
 </html>
