upload先を外部に変更

--- a/src/public/viewer.html
+++ b/src/public/viewer.html
@@ -13,6 +13,6 @@
     <div id="viewer-container">
       <img id="comic-page" src="" alt="Manga Page" />
     </div>
-    <script src="js/viewer.ts"></script>
+    <script src="script/viewer.js"></script>
   </body>
 </html>
