--- a/src/public/mangaUpload.html
+++ b/src/public/mangaUpload.html
@@ -18,6 +18,6 @@
       <input type="text" id="tags" name="tags" placeholder="タグ">
       <button type="submit">アップロード</button>
     </form>
-    <script src="js/mangaUpload.ts"></script>
+    <script src="script/mangaUpload.js"></script>
   </body>
 </html>
