--- a/src/public/mangaList.html
+++ b/src/public/mangaList.html
@@ -16,6 +16,6 @@
       </div>
       <div class="pagination" id="pagination"></div>
     </div>
-    <script src="script/mangaList.js"></script>
+    <script type="module" src="script/mangaList.js"></script>
   </body>
 </html>
