--- a/client/index.html
+++ b/client/index.html
@@ -16,6 +16,6 @@
       </div>
       <div class="pagination" id="pagination"></div>
     </div>
-    <script type="module" src="script/mangaList.js"></script>
+    <script type="module" src="src/script/mangaList.ts"></script>
   </body>
 </html>
