--- a/client/index.html
+++ b/client/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ローカル漫画ビューア</title>
-    <link rel="stylesheet" href="css/mangaList.css" />
+    <link rel="stylesheet" href="src/css/mangaList.css" />
   </head>
   <body>
     <h1>ローカル漫画ビューア</h1>
-    <div id="tag-list-page"><a href="/taglist">タグリスト</a></div>
-    <div id="manga-upload-page"><a href="/upload">アップロード</a></div>
+    <div id="tag-list-page"><a href="src/taglist.html">タグリスト</a></div>
+    <div id="manga-upload-page"><a href="src/mangaUpload.html">アップロード</a></div>
     <div class="manga-list">
       <div id="manga-list-container">
         <!-- 漫画フォルダ一覧を表示する場所 -->
