リンクを変更

--- a/client/src/pages/mangaList/mangaList.html
+++ b/client/src/pages/mangaList/mangaList.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ローカル漫画ビューア</title>
-    <link rel="stylesheet" href="src/css/mangaList.css" />
+    <link rel="stylesheet" href="mangaList.css" />
   </head>
   <body>
     <h1>ローカル漫画ビューア</h1>
-    <div id="tag-list-page"><a href="src/taglist.html">タグリスト</a></div>
-    <div id="manga-upload-page"><a href="src/mangaUpload.html">アップロード</a></div>
+    <div id="tag-list-page"><a href="../tagList/tagList.html">タグリスト</a></div>
+    <div id="manga-upload-page"><a href="../upload/upload.html">アップロード</a></div>
     <div class="manga-list">
       <div id="manga-list-container">
         <!-- 漫画フォルダ一覧を表示する場所 -->
       </div>
       <div class="pagination" id="pagination"></div>
     </div>
-    <script type="module" src="src/script/mangaList.js"></script>
+    <script type="module" src="mangaList.js"></script>
   </body>
 </html>
