--- a/client/src/pages/tagList/tagList.html
+++ b/client/src/pages/tagList/tagList.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>タグリスト</title>
-    <link rel = "stylesheet" href="css/taglist.css">
+    <link rel = "stylesheet" href="taglist.css">
   </head>
   <body>
     <div id="tag-list-container">
     </div>
-    <script type="module" src="script/taglist.js"></script>
+    <script type="module" src="taglist.js"></script>
   </body>
 </html>
