--- a/client/src/pages/viewer/viewer.html
+++ b/client/src/pages/viewer/viewer.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ビュワー</title>
-    <link rel = "stylesheet" href="css/viewer.css">
+    <link rel = "stylesheet" href="viewer.css">
   </head>
   <body>
     <header id="header">
@@ -13,6 +13,6 @@
     <div id="viewer-container">
       <img id="comic-page" src="" alt="Manga Page" />
     </div>
-    <script type="module" src="script/viewer.js"></script>
+    <script type="module" src="viewer.js"></script>
   </body>
 </html>
