--- a/client/src/pages/upload/upload.html
+++ b/client/src/pages/upload/upload.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>アップロード</title>
-    <link rel="stylesheet" href="css/mangaUpload.css" />
+    <link rel="stylesheet" href="upload.css" />
   </head>
   <body>
     <form id="upload-form" method="post" enctype="multipart/form-data">
@@ -18,6 +18,6 @@
       <input type="text" id="tags" name="tags" placeholder="タグ">
       <button type="submit">アップロード</button>
     </form>
-    <script type="module" src="script/mangaUpload.js"></script>
+    <script type="module" src="upload.js"></script>
   </body>
 </html>
