--- a/client/src/pages/mangaList/mangaList.html
+++ b/client/src/pages/mangaList/mangaList.html
@@ -8,8 +8,11 @@
   </head>
   <body>
     <h1>ローカル漫画ビューア</h1>
-    <div id="tag-list-page"><a href="../tagList/tagList.html">タグリスト</a></div>
-    <div id="manga-upload-page"><a href="../upload/upload.html">アップロード</a></div>
+    <div class="navigation-links">
+      <div id="tag-list-page"><a href="../tagList/tagList.html">タグリスト</a></div>
+      <div id="manga-upload-page"><a href="../upload/upload.html">アップロード</a></div>
+      <div id="settings-page"><a href="../settings/settings.html">設定</a></div>
+    </div>
     <div class="manga-list">
       <div id="manga-list-container">
         <!-- 漫画フォルダ一覧を表示する場所 -->
