--- a/client/src/pages/viewer/viewer.html
+++ b/client/src/pages/viewer/viewer.html
@@ -11,6 +11,7 @@
       <button id="back-button">一覧に戻る</button>
     </header>
     <div id="viewer-container">
+      <div id="loading" class="loading">読み込み中...</div>
       <img id="comic-page" src="" alt="Manga Page" />
     </div>
     <script type="module" src="viewer.js"></script>
